k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
  labels:
    app: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0.29
          imagePullPolicy: IfNotPresent
          volumeMounts:
#            - mysql 数据存储位置
            - mountPath: /var/lib/mysql
              name: webook-mysql-volume
          ports:
            - containerPort: 3306
      restartPolicy: Always
#       pod 有哪些volumes
      volumes:
        - name: webook-mysql-volume
          persistentVolumeClaim:
            claimName: webook-mysql-pvc
