k8s-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gohub-redis
  labels:
    app: gohub-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gohub-redis
  template:
    metadata:
      name: gohub-redis
      labels:
        app: gohub-redis
    spec:
      containers:
        - name: gohub-redis
          image: redis:latest
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
