k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gohub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gohub
  template:
    metadata:
      labels:
        app: gohub
#        pod 具体信息
    spec:
      containers:
        - name: gohub
          image: andras/gohub:v0.0.1
          ports:
            - containerPort: 8080
