k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gohub-redis
spec:
  selector:
    app: gohub-redis
  ports:
    - protocol: TCP
      port: 16379
      targetPort: 6379
      nodePort: 30002
  type: NodePort
