k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gohub-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  使用nginx
  ingressClassName: nginx
  rules:
#    host 是gohub.com 命中
    - host: gohub.com
      http:
        paths:
#          请求路径是/ 转发到gohub
          - backend:
              service:
                name: gohub
                port:
                  number: 81
            pathType: Prefix
            path: /
